# MIRA

./: .gitignore  README.md  install.sh
.github/workflows/: brain.yml  release.yml
brain/: pyproject.toml
brain/mira/: __init__.py  config.py  mcp_server.py  scheduler.py  server.py
brain/mira/agent/: bridge.py  cli_bridge.py  orchestrator.py  tools.py
brain/mira/learning/: __init__.py  distill.py
brain/mira/llm/: __init__.py  anthropic_client.py  ollama_client.py  router.py  subscription.py
brain/mira/mcp/: __init__.py  client.py
brain/mira/memory/: store.py
brain/mira/skills/: __init__.py  executor.py  forge.py  store.py
brain/mira/system/: __init__.py
brain/mira/voice/: __init__.py
brain/tests/: test_bridge.py  test_learning.py  test_mcp.py  test_mcp_server.py  test_memory.py  test_metrics.py  test_providers.py  test_scheduler.py  test_sessions.py  test_skills.py  test_tools.py
docs/: ARCHITECTURE.md  mcp.example.json
mac-app/: Package.swift
mac-app/Sources/MIRA/: AppDelegate.swift  Info.plist  MIRAApp.swift
mac-app/Sources/MIRA/Models/: Message.swift  Session.swift  Skill.swift  ToolCall.swift
mac-app/Sources/MIRA/Services/: AgentSocket.swift  BackendClient.swift  BrainBootstrap.swift  ConsentManager.swift  DictateController.swift  HotkeyManager.swift  ScreenCapture.swift  ToolExecutor.swift  VoiceController.swift  WakeWordListener.swift
mac-app/Sources/MIRA/Views/: ChatView.swift  ContentView.swift  SessionsSidebar.swift  SettingsView.swift
mac-app/Tests/MIRATests/: MessageTests.swift
scripts/: build-app.sh  dev.sh  install-launchd.sh  make-dmg.sh  uninstall.sh
