[project]
name = "mira-brain"
version = "0.1.0"
description = "MIRA brain: LLM routing, memory, agent orchestration."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "httpx>=0.27",
    "chromadb>=0.5",
    "sentence-transformers>=3.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "websockets>=13",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
mira-brain = "mira.server:main"
mira-tools-server = "mira.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mira*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
