[project]
name = "mira-brain"
version = "0.1.0"
description = "MIRA brain: LLM routing, memory, agent orchestration."
requires-python = ">=3.11"
# Core deps are pure-Python / lightweight so install is fast and reliable
# on any Python (including brand-new releases without ML wheels yet).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "websockets>=13",
    "mcp>=1.0",
]

[project.optional-dependencies]
# Semantic memory (vector embeddings). Heavy (pulls torch); opt-in via
# `pip install '.[embeddings]'` or MIRA_WITH_EMBEDDINGS=1 in the installer.
# Without it, recall degrades to keyword + graph search — still useful.
embeddings = [
    "chromadb>=0.5",
    "sentence-transformers>=3.2",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
mira-brain = "mira.server:main"
mira-tools-server = "mira.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mira*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
